@@ -1,3 +1,7 @@
+2004-08-22  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* canon.c,usb.c,library.c: Fixed various gp_log / GP_DEBUG problems.
+
 2004-08-12  Hubert Figuiere  <hfiguiere@teaser.fr>
 
 	* canon.[ch]: Added Powershot S60
